[project]
name = "cloud-sec-env"
version = "0.1.0"
description = "Cloud security OpenEnv environment"
authors = [{name = "Danish Syed"}]

dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "openenv-core>=0.2.0"
]

[project.scripts]
server = "server:app"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"